# MerlinsCollection

./: .gitignore  CLAUDE.md  package-lock.json
.claude/skills/tdd/: SKILL.md
.github/workflows/: ci.yml
backend/: .env.example  README.md  pyproject.toml
backend/src/merlins_collection/: config.py  dependencies.py  main.py
backend/src/merlins_collection/models/: auth.py  catalog.py  chat.py  inventory.py
backend/src/merlins_collection/routers/: auth.py  chat.py  inventory.py
backend/src/merlins_collection/services/: bedrock.py  catalog_sync.py  cognito.py  dynamodb.py  mcp_client.py  pokemontcg.py
backend/tests/: conftest.py  test_config.py  test_placeholder.py
backend/tests/models/: test_auth.py  test_catalog.py  test_chat.py  test_inventory.py
backend/tests/routers/: test_auth.py  test_chat.py  test_inventory.py
backend/tests/services/: test_bedrock.py  test_catalog_sync.py  test_cognito.py  test_dynamodb.py  test_pokemontcg.py
docs/superpowers/plans/: 2026-06-18-nextjs15-upgrade.md  2026-06-19-frontend-home.md  2026-06-22-backend-data-model.md  2026-06-25-home-page-motion.md
docs/superpowers/specs/: 2026-06-18-repo-setup-design.md  2026-06-19-frontend-home-design.md  (+2 more)
frontend/: .env.example  README.md  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
frontend/app/: globals.css  layout.tsx
frontend/hooks/: useCardTilt.ts
frontend/lib/: api.ts  articles.ts  auth.ts  collectionFocus.ts  inventory.ts  sanity.ts
mcp-server/: README.md  package.json
mcp-server/src/: index.ts  repository.ts
(+76 files in other folders)
